# SOLVIA

./: 2processing.ipynb  SOLVIA1.docx  predicted.xlsx
IEEE-Solar-Backend/: .dockerignore  .gitignore  Dockerfile  README.md  combined_weather_pollution_data.csv  main.py  pyproject.toml
IEEE-Solar-Backend/config/: __init__.py  dbConfig.py
IEEE-Solar-Backend/middleware/: AuthMiddleware.py  HandleExceptions.py
IEEE-Solar-Backend/models/: __init__.py
IEEE-Solar-Backend/models/DB/: PredictModel.py
IEEE-Solar-Backend/routes/: nsut.py  predict.py
IEEE-Solar-Backend/schemas/: __init__.py  predict.py
IEEE-Solar-Backend/test/: pridict.http
IEEE-Solar-Backend/utils/: getWeaterInfo.py
current/: package-lock.json  package.json
current/app/: globals.css  layout.tsx
current/app/(home)/: layout.tsx  page.tsx
current/app/(home)/ML/: page.tsx
current/app/(home)/_components/: heading.tsx  heroes.tsx  logo.tsx  navbar.tsx
current/app/(home)/nsut/: page.tsx
current/components/Chart/: BeautifulLoading.tsx  NSUTChart.tsx  PowerChart.tsx
current/components/Form/: DetailForm.tsx  NSUTForm.tsx
current/convex/: auth.config.js
current/current/: package.json
current/current/components/: Footer.tsx
discarded/Solar-panel-project/backend/: app.js  package-lock.json
discarded/Solar-panel-project/frontend/: package-lock.json  package.json
newPower/: 2processing.ipynb
newPower/Power/: 1.py  2processingtest_train.ipynb  augtest.csv  novtest.csv  scaler_model.pkl  test.csv
newPower/Power/.ipynb_checkpoints/: 1preprocessing-checkpoint.ipynb
(+28 files in other folders)
