[project]
name = "ieee-solar-project"
version = "0.1.0"
description = ""
authors = [
    {name = "Dheeraj Sharma",email = "greatnerve@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "fastapi (>=0.115.6,<0.116.0)",
    "joblib (>=1.4.2,<2.0.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "scikit-learn (==1.5.1)",
    "pandas (>=2.2.3,<3.0.0)",
    "mongoengine (>=0.29.1,<0.30.0)",
    "requests (>=2.32.3,<3.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
